
2003-07-xx Version 1.31 Beta xxJul03
- Documentation.
- Clear VolCatInfo in askdir.c so that readbytes is zeroed.
- Add SD statistics to backup report.
- Removed old workq code.
- Fixed rescheduling after error.
- Fixed delayed starts which were not working.
- Added priority to values that can change when starting
  a job.
- Complete implementation of new job scheduler. jobq.h jobq.c
  This code is turned off unless specifically enabled in src/version.h
- Integrate code from Nic Bellamy to check for recycled volume in
  mount.c in SD.
- Fix a couple of bugs in dlist.c
- Begin implementation of new job scheduler.
- Take serial.h provided by David Craigon, which corrects differences in 
  prototypes between serial.h and serial.c.
- Make db_get_media_ids() return Media Ids only for the current pool.
- Add new jobq.h and jobq.c drived from workq.
- Add JobPriority to jcr, and Priority to Job resource as well as
  to the run line in a Schedule.
- Remove unused pool record from autoprune.c.
- Implement Nic Bellamy's RecycleCurrentVolume.     
- Implement RecycleOldestVolume.
- Begin adding new JOB_QUEUE code to the Director.
- Create a single routine recycle_volume().
- Retry accept(), bind() and socket() if EINTR occurs.
- Implement insert_before(), insert_after(), and empty() for dlist class.
  Also require offset to be given by giving item and link address.
- Make error some messages in smtp.c a bit more explicit.

2003-07-12 Version 1.31 Beta 14Jul03
- Marc Brueckner reported a crash during restore (a missing tree->)
- Moved host.h.in file from filed to src.
- Update btraceback to include host os, distname, distver in output.
- Split list (in lib) into alist and dlist both with .h and .c.
- Update home page to include Project status page.

2003-07-12 Version 1.31 Beta 10Jul03
- Manual updates.
- Clean up some unused variables detected by the IRIX compiler.
- Test two directories on Win32 -- caused a crash. I forgot
  to NULL the uid cache pointer after releasing it.